--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=LiquidCrystal I2C Multilingual
 version=2.0.1
 author=Loc P. Le
 maintainer=Loc P. Le <phuocloc@gmail.com>
-sentence=For printing multi languages like French, Spanish, Russian, Vietnamese, Katakana and symbols in UTF8.
+sentence=For printing multilingual UTF8 strings (French, Russian, Vietnamese, Katakana, etc.) to LCD1602, LCD2004, etc. via I2C.
 paragraph=Automatically move down and pause when printing long text. This is subclass of LiquidCrystal_I2C.
 category=Display
 url=https://github.com/locple/LCDI2C_Multilingual
